Отладка работоспобности микросервисов
- Добавлены отдельные БД для каждого из микросервисов
- Исправление работы мапперов
- Исправление обогащения DTO